--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/mehmetbilgil">
+          <a href="https://www.linkedin.com/in/mehmetbilgil/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://www.github.com/mbilgil">
+          <a href="https://github.com/mbilgil">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.twitter.com/m_bilgil">
+          <a href="https://twitter.com/m_bilgil">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.medium.com/@mbilgil0">
+          <a href="https://medium.com/@mbilgil0">
             <i class="fab fa-medium"></i>
           </a>
         </div>
