--- a/index.html
+++ b/index.html
@@ -181,40 +181,40 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-sourcetree"></i>
+            <i class="fab fa-sourcetree" title="Source Tree"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-android"></i>
+            <i class="fab fa-android" title="Android"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-bitbucket"></i>
+            <i class="fab fa-bitbucket" title="Bitbucket"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-git"></i>
+            <i class="fab fa-git" title="Git"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-jira"></i>
+            <i class="fab fa-jira" title="Jira"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-java"></i>
+            <i class="fab fa-java" title="Java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-github"></i>
+            <i class="fab fa-github" title="Github"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js"></i>
+            <i class="fab fa-js" title="JavaScript"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <i class="fab fa-html5" title="HTML"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3"></i>
+            <i class="fab fa-css3" title="CSS"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fas fa-database"></i>
+            <i class="fas fa-database" title="Oracle PL/SQL"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab fa-npm" title="Node.js"></i>
           </li>
         </ul>
 
