--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <span class="text-primary">Bilgil</span>
         </h1>
         <div class="subheading mb-5">Istanbul,TURKEY
-          <a href="mailto:name@email.com">mbilgil0@gmail.com</a>
+          <a href="mailto:name@email.com">mbilgil@hotmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
