add new experience  and bug fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Personal Resume/Portfolio Website">
   <meta name="author" content="Mehmet Bilgil">
 
-  <link rel="icon" type="image/ico" href="img/logo.png" />
+  <link rel="icon" type="image/ico" href="img/logo2.png" />
   <title>Mehmet Bilgil</title>
    <!--Expreince Icon-->
    <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
@@ -27,18 +27,18 @@
 </head>
 
 <body id="page-top">
-  <div class="loader__wrap" role="alertdialog" aria-busy="true" aria-live="polite" aria-label="Loading…">
+  <!-- <div class="loader__wrap" role="alertdialog" aria-busy="true" aria-live="polite" aria-label="Loading…">
     <div class="loader" aria-hidden="true">
       <div class="loader__sq"></div>
       <div class="loader__sq"></div>
     </div>
-  </div>
+  </div> -->
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Mehmet Bilgil</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.gif" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/app-dev.gif" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,9 +52,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
@@ -138,28 +138,10 @@
           </div>
           <div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
             <div class="timeline__event__icon">
-              <i class="fas fa-university"></i>
-            </div>
-            <div class="timeline__event__date">
-               10.2016-05.2017
-            </div>
-            <div class="timeline__event__content">
-              <div class="timeline__event__title">
-                Part-Time Student Worker
-              </div>
-              <div class="timeline__event__description">
-                <p>Sakarya University</p>
-              </div>
-
-            </div>
-          </div>
-          <div class="timeline__event animated fadeInUp timeline__event--type1">
-            <div class="timeline__event__icon">
               <i class="fas fa-truck"></i>
-
             </div>
             <div class="timeline__event__date">
-              18.10.2018- ...
+              18.10.2018-01.03.2020
             </div>
             <div class="timeline__event__content">
               <div class="timeline__event__title">
@@ -168,9 +150,26 @@
               <div class="timeline__event__description">
                 <p>Ekol Logistics</p>
               </div>
+
             </div>
           </div>
+          <div class="timeline__event animated fadeInUp timeline__event--type1">
+            <div class="timeline__event__icon">
+              <i class="fas fa-university"></i>
 
+            </div>
+            <div class="timeline__event__date">
+              02.03.2020- ...
+            </div>
+            <div class="timeline__event__content">
+              <div class="timeline__event__title">
+                Software Developer
+              </div>
+              <div class="timeline__event__description">
+                <p>YKB Technology</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -178,7 +177,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
@@ -209,13 +208,12 @@
                 <div class="title">Hayrettin Ozkan Primary School</div>
                 <div class="time">
                   <span>2002-2010</span>
-                  <span>Now</span>
                 </div>
               </li>
             </ul>
           </div>
         </section>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
@@ -228,14 +226,14 @@
           <div class="hexagon color-android">
               <i class="fab fa-android" title="Android"></i>
           </div>
-          <div class="hexagon color-source-tree">
-              <i class="fab fa-sourcetree" title="Source Tree"></i>
+          <div class="hexagon color-react">
+              <i class="fab fab fa-react" title="React.js"></i>
           </div>
           <div class="hexagon color-git">
               <i class="fab fa-git" title="Git"></i>
           </div>
-          <div class="hexagon color-jira">
-              <i class="fab fa-jira" title="Jira"></i>
+          <div class="hexagon color-java">
+              <i class="fab fa-java" title="Java"></i>
           </div>
           <div class="hexagon color-javascript">
               <i class="fab fa-js" title="JavaScript"></i>
