new jod added and company logos refinement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-
+  <link href="css/resume.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -78,7 +78,9 @@
         <div class="subheading mb-5">Istanbul,TURKEY
           <a href="mailto:name@email.com">mbilgil@hotmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I'm a software engineer who constantly seeks out innovative solutions to everyday
+          problems. In my two years in this industry, I've improved my analytical thinking and
+          collaboration skills, and I love working with a team.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mehmetbilgil/">
             <i class="fab fa-linkedin-in"></i>
@@ -155,18 +157,34 @@
           </div>
           <div class="timeline__event animated fadeInUp timeline__event--type1">
             <div class="timeline__event__icon">
-              <i class="fas fa-university"></i>
+              <img src="img/yapikredi-logo.png" class="ykb-logo">
 
             </div>
             <div class="timeline__event__date">
-              02.03.2020- ...
+              02.03.2020-17.09.2021
             </div>
             <div class="timeline__event__content">
               <div class="timeline__event__title">
                 Software Developer
               </div>
               <div class="timeline__event__description">
-                <p>YKB Technology</p>
+                <p>Yapı Kredi</p>
+              </div>
+            </div>
+          </div>
+          <div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
+            <div class="timeline__event__icon">
+             <img src="img/turkcell.png" class="turkcell-logo">
+            </div>
+            <div class="timeline__event__date">
+              20.09.2021-Current
+            </div>
+            <div class="timeline__event__content">
+              <div class="timeline__event__title">
+                Software Development Specialist
+              </div>
+              <div class="timeline__event__description">
+                <p>Turkcell</p>
               </div>
             </div>
           </div>
